--- a/EbanachiG/EbanachiG.csproj
+++ b/EbanachiG/EbanachiG.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{39D9359A-58E5-4AFA-8EA4-88E6B3877B72}</ProjectGuid>
+    <ProjectGuid>{2D848942-B7F2-48B5-8390-73E544DC64D5}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Ebanachi</RootNamespace>
-    <AssemblyName>Ebanachi</AssemblyName>
+    <RootNamespace>EbanachiG</RootNamespace>
+    <AssemblyName>EbanachiG</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
